# clef

./: .gitignore  CMakeLists.txt  Makefile  README.md  clef
include/: app.h  audio_engine.h  color.h  font_handler.h  macros.h  midi_stream.h  oscillator.h  oscilloscope.h  pixel_renderer.h  ring_buffer.h  sample_buffer.h  size.h  texture_handler.h  window.h
include/component_system/: component.h  component_methods.h  component_system.h
include/components/: envelope.h  oscillator.h  rack.h
include/constants/: size.h
include/midi/: midi.h  midi_stream.h
include/panels/: component_preview_panel.h  dB_meter.h
include/rack/: component.h  component_handler.h  rack.h
include/widgets/: oscilloscope.h  pan_meter.h  play_pause_panel.h  settings_panel.h
scripts/: todo.sh
src/: .main.c.swp  app.c  audio_engine.c  dB_meter.c  font_handler.c  main.c  midi.c  midi_stream.c  oscillator.c  oscilloscope.c  pixel_renderer.c  ring_buffer.c  sample_buffer.c  texture_handler.c  window.c
src/component_system/: component_system.c
src/components/: envelope.c  oscillator.c  rack.c
src/midi/: midi.c  midi_stream.c
src/panel/: component_preview_panel.c  dB_meter.c  oscilloscope.c  play_pause_panel_render.c  settings_panel.c
src/panels/: component_preview_panel.c  dB_meter.c  oscilloscope.c
src/rack/: component.c  component_handler.c  rack.c
src/widgets/: dB_meter.c  oscilloscope.c  pan_meter.c  play_pause_panel_render.c  settings_panel.c
